# Souzou

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  package-lock.json  run-all-tests.ps1  run-tests.sh  setup_themes.py
backend/: .gitignore  Dockerfile  Dockerfile.dev  entrypoint.sh  entrypoint_dev.sh  pyproject.toml  requirements.txt
backend/ai/: consumers.py  routing.py  tests.py  urls.py  views.py
backend/ai/llm/: agent.py  provider.py  tools.py
backend/api/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/api/management/commands/: create_default_themes.py  index_notes.py
backend/api/migrations/: 0001_initial.py  0002_note_updated_at_alter_note_type.py  0003_theme.py  0004_remove_theme_is_default_entity_delete_note.py  0005_add_ai_chat_history_entity_type.py  0005_add_vector_fields.py  0006_rename_api_entity_type_idx_api_entity_type_a8c9e9_idx_and_more.py  0007_add_ai_chat_history_entity_type.py  0008_merge_20250611_1510.py  0009_tag_entitytag_entity_tags_and_more.py  0010_entity_metadata.py  0011_sync_fields.py
backend/api/services/: ollama_service.py  vector_service.py
backend/api/tests/: test_sync_pull.py  test_sync_push.py  test_views.py
backend/backend/: __init__.py  asgi.py  celery.py  dev_settings.py  settings.py  test_settings.py  urls.py
django/: Dockerfile
frontend/: .gitignore  Dockerfile  README.md  capacitor.config.ts  forge.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webapp/: Dockerfile  package.json  (+1 more)
(+201 files in other folders)
